--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios-retry": "^3.1.9",
     "dayjs": "^1.10.6",
     "node-sass": "^6.0.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
